Added home and volume buttons

--- a/appIndex.html
+++ b/appIndex.html
@@ -20,7 +20,7 @@
             <button><i class="fa-solid fa-volume-high fa-1x"></i></button>
         </div>
 
-        <div class="home">
+        <div class="home_btn">
             <button><i class="fa-solid fa-house fa-1x"></i></button>
         </div>
 
