additon of updateItems function

--- a/appIndex.html
+++ b/appIndex.html
@@ -7,21 +7,22 @@
         <!-- Styling done through referenced style sheet -->
         <link rel="stylesheet" href="appStyle.css">
         <script src="https://kit.fontawesome.com/c8513be0cb.js" crossorigin="anonymous"></script>
-        <audio src="backtrack.mp3" id="quiz_song" loop="loop"></audio>
+        <audio src="Itachi Uchiha.webm" id="quiz_song" loop="loop"></audio>
     </head>
     <body>
-        <!-- Defined Start Button -->
-        <div class="start_btn">
-            <button>START</button>
+        <!-- Defined home Button -->
+        <div class="home_btn">
+            <button><i class="fa-solid fa-house fa-1x"></i></button>
         </div>
 
-                <!-- Defined Start Button -->
+        <!-- Defined volume Button -->
         <div class="volume_on_btn">
             <button><i class="fa-solid fa-volume-high fa-1x"></i></button>
         </div>
 
-        <div class="home_btn">
-            <button><i class="fa-solid fa-house fa-1x"></i></button>
+        <!-- Defined Start Button -->
+        <div class="start_btn">
+            <button>START</button>
         </div>
 
         <!-- Defined Informational Box -->
@@ -44,7 +45,7 @@
         <div class="quiz_box">
             <!-- Header of Quiz Box to display timer and timer line -->
             <header>
-                <div class="title">Fitness IQ Quiz</div>
+                <div class="title"></div>
                 <div class="timer">
                     <div class="time_left_text">Time Left</div>
                     <div class="timer_sec">30</div>
@@ -52,10 +53,8 @@
                 <div class="timer_line"></div>
             </header>
             <section>
-                <div class="question">
-                </div>
-                <div class="option_list">
-                </div>
+                <div class="question"></div>
+                <div class="option_list"></div>
             </section>
             <!-- Footer of Quiz Box to display number of quesitons and navigational button -->
             <footer>
@@ -69,8 +68,9 @@
             <div class="icon">
                 <i class=""></i>
             </div>
-            <div class="complete_text">You've completed the Quiz!</div>
+            <div class="complete_text">THANK YOU!</div>
             <div class="score_text"></div>
+            <div class="ty_text">Thank you for your time</div>
             <div class="buttons">
                 <button class="restart">Retry</button>
                 <button class="quit">Quit</button>
