Update to all clases & functions

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             </div>
         </div>
 
-        <!-- Imported Questions used within html application -->
+        <!-- Imported Questions applied to JS -->
         <script src="appQuestions.js"></script>
 
-        <!-- Function to compile quiz questions, mark answers and app functionality -->
+        <!-- Function to compile quiz questions, mark answers and appBox functionality -->
         <script src="appFunctions.js"></script>
     </body>
 </html>
