Update to main functions, commented out storage fn

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Fitness IQ Quiz</title>
         <link rel="stylesheet" href="appStyle.css">
         <script src="https://kit.fontawesome.com/c8513be0cb.js" crossorigin="anonymous"></script>
-        <audio src="Itachi Uchiha.webm" id="quiz_song" loop="loop"></audio>
+        <audio src="backtrack.mp3" id="quiz_song" loop="loop"></audio>
     </head>
     <body>
         <div class="hmeButton">
@@ -31,8 +31,8 @@
                 <div class="info">Good Luck!</div>
             </div>
             <div class="buttons">
-                <button class="quit">Exit Quiz</button>
-                <button class="restart">Continue</button>
+                <button class="quitButton">Exit Quiz</button>
+                <button class="restartButton">Continue</button>
             </div>
         </div>
 
@@ -51,7 +51,7 @@
             </section>
             <footer>
                 <div class="total_questions"></div>
-                <button class="next_btn">Next</button>
+                <button class="nextButton">Next</button>
             </footer>
         </div>
 
@@ -59,12 +59,12 @@
             <div class="icon">
                 <i class=""></i>
             </div>
-            <div class="complete_text">THANK YOU!</div>
+            <div class="completion_text">THANK YOU!</div>
             <div class="score_text"></div>
             <div class="ty_text">Thank you for your time</div>
             <div class="buttons">
-                <button class="restart">Retry</button>
-                <button class="quit">Quit</button>
+                <button class="restartButton">Retry</button>
+                <button class="quitButton">Quit</button>
             </div>
         </div>
 
