Updated code with dark mode function

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         <audio src="Itachi Uchiha.webm" id="quiz_song" loop="loop"></audio>
     </head>
     <body>
+        <div class="toggleButton">
+            <button><i class="fa-solid fa-toggle-off fa-1x"></i></button>
+        </div>
+
         <div class="hmeButton">
             <button><i class="fa-solid fa-house fa-1x"></i></button>
         </div>
