Update dark mode toggle

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
         <audio src="Itachi Uchiha.webm" id="quizSong" loop="loop"></audio>
     </head>
     <body>
-        <div class="toggleButton">
-            <button><i class="fa-solid fa-toggle-off fa-1x"></i></button>
+        <div>
+            <input type="checkbox" class="toggle" id="tB" />
+            <label class="toggleBox" for="tB">
+                <i class="fas fa-moon"></i>
+                <i class="fas fa-sun"></i>
+                <div class="ball"></div>
+            </label>
         </div>
 
         <div class="hmeButton">
