--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div>
             <input type="checkbox" class="toggle" id="tB" />
             <label class="toggleBox" for="tB">
-                <i class="fas fa-moon"></i>
-                <i class="fas fa-sun"></i>
+                <i class="fa-solid fa-moon"></i>
+                <i class="fa-solid fa-sun"></i>
                 <div class="ball"></div>
             </label>
         </div>
