Update of Media Query

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     </head>
     <body>
         <div>
-            <input type="checkbox" class="checkbox" id="chk" />
-            <label class="label" for="chk">
-                <i class="fas fa-moon"></i>
-                <i class="fas fa-sun"></i>
+            <input type="checkbox" class="toggle" id="tB" />
+            <label class="toggleBox" for="tB">
+                <i class="fa-solid fa-moon"></i>
+                <i class="fa-solid fa-sun"></i>
                 <div class="ball"></div>
             </label>
         </div>
