--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Fitness IQ Quiz</title>
+        <link rel="shortcut icon" type="image/png" href="favicon.png">
         <link rel="stylesheet" href="appStyle.css">
         <script src="https://kit.fontawesome.com/c8513be0cb.js" crossorigin="anonymous"></script>
         <audio src="Itachi Uchiha.webm" id="quizSong" loop="loop"></audio>
